--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -611,6 +611,30 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 1.25rem;
 }
 
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
+.mt-28 {
+  margin-top: 7rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
 .block {
   display: block;
 }
@@ -633,6 +657,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .h-8 {
   height: 2rem;
+}
+
+.h-auto {
+  height: auto;
 }
 
 .w-full {
@@ -877,6 +905,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .text-\[600px\] {
   font-size: 600px;
+}
+
+.text-\[40px\] {
+  font-size: 40px;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .font-light {
@@ -1179,6 +1216,14 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-right: 1.25rem;
   }
 
+  .md\:mt-32 {
+    margin-top: 8rem;
+  }
+
+  .md\:mb-20 {
+    margin-bottom: 5rem;
+  }
+
   .md\:w-9 {
     width: 2.25rem;
   }
@@ -1226,6 +1271,11 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1249,8 +1299,24 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-bottom: 3rem;
   }
 
+  .lg\:mb-20 {
+    margin-bottom: 5rem;
+  }
+
+  .lg\:mt-48 {
+    margin-top: 12rem;
+  }
+
   .lg\:flex {
     display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:h-auto {
+    height: auto;
   }
 
   .lg\:max-w-0 {
@@ -1347,6 +1413,14 @@ Ensure the default browser behavior of the `hidden` attribute.
     height: 9rem;
   }
 
+  .xl\:w-5 {
+    width: 1.25rem;
+  }
+
+  .xl\:w-4 {
+    width: 1rem;
+  }
+
   .xl\:max-w-2xl {
     max-width: 42rem;
   }
@@ -1415,5 +1489,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   .xl\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .xl\:text-\[20px\] {
+    font-size: 20px;
   }
 }
