--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -647,6 +647,34 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: -1.25rem;
 }
 
+.-mr-12 {
+  margin-right: -3rem;
+}
+
+.-mr-8 {
+  margin-right: -2rem;
+}
+
+.-mr-0 {
+  margin-right: -0px;
+}
+
+.-ml-12 {
+  margin-left: -3rem;
+}
+
+.-ml-2 {
+  margin-left: -0.5rem;
+}
+
+.-mr-2 {
+  margin-right: -0.5rem;
+}
+
+.-mr-10 {
+  margin-right: -2.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -841,6 +869,50 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pl-2 {
   padding-left: 0.5rem;
+}
+
+.pr-12 {
+  padding-right: 3rem;
+}
+
+.pr-24 {
+  padding-right: 6rem;
+}
+
+.pl-12 {
+  padding-left: 3rem;
+}
+
+.pl-6 {
+  padding-left: 1.5rem;
+}
+
+.pr-20 {
+  padding-right: 5rem;
+}
+
+.pr-16 {
+  padding-right: 4rem;
+}
+
+.pr-\[68px\] {
+  padding-right: 68px;
+}
+
+.pr-0 {
+  padding-right: 0px;
+}
+
+.pr-\[30px\] {
+  padding-right: 30px;
+}
+
+.pl-\[68px\] {
+  padding-left: 68px;
+}
+
+.pr-\[12px\] {
+  padding-right: 12px;
 }
 
 .text-center {
@@ -1053,6 +1125,14 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-bottom: 1rem;
   }
 
+  .md\:-ml-8 {
+    margin-left: -2rem;
+  }
+
+  .md\:-ml-7 {
+    margin-left: -1.75rem;
+  }
+
   .md\:block {
     display: block;
   }
@@ -1085,12 +1165,49 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-right: 0.75rem;
   }
 
+  .md\:px-14 {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+  }
+
+  .md\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .md\:px-\[52px\] {
+    padding-left: 52px;
+    padding-right: 52px;
+  }
+
+  .md\:px-\[50px\] {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .md\:px-\[70px\] {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
   .md\:pr-3 {
     padding-right: 0.75rem;
   }
 
   .md\:pl-3 {
     padding-left: 0.75rem;
+  }
+
+  .md\:pr-\[70px\] {
+    padding-right: 70px;
+  }
+
+  .md\:pr-\[72px\] {
+    padding-right: 72px;
+  }
+
+  .md\:pr-\[74px\] {
+    padding-right: 74px;
   }
 
   .md\:text-3xl {
