--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -1254,6 +1254,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     display: flex;
   }
 
+  .xl\:max-h-\[389px\] {
+    max-height: 389px;
+  }
+
   .xl\:w-4 {
     width: 1rem;
   }
